--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="logo.jpeg" alt="Logo" />
+      <img src="logo.jpeg" alt="Logo" style=width: 400px;"/>
     </div>
     <nav>
       <ul>
