--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="videos">
     <h2>Watch on YouTube</h2>
     <div class="video-grid">
-      <iframe width="360" height="215" src="https://www.youtube.com/embed?listType=user_uploads&list=tacticalwook" frameborder="0" allowfullscreen></iframe>
+      <iframe width="360" height="215" src="https://youtu.be/09ft5tJVjMs?si=FxIA-3Zac_K_qpDs" frameborder="0" allowfullscreen></iframe>
       <a href="https://youtube.com/@tacticalwook" class="btn">Visit YouTube Channel</a>
     </div>
   </section>
