--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="videos">
     <h2>Watch on YouTube</h2>
     <div class="video-grid">
-      <iframe width="360" height="215" src="https://youtu.be/09ft5tJVjMs?si=FxIA-3Zac_K_qpDs" frameborder="0" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/09ft5tJVjMs?si=9eyjWKync_JoPeoG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <a href="https://youtube.com/@tacticalwook" class="btn">Visit YouTube Channel</a>
     </div>
   </section>
