--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section id="hero">
     <div class="hero-text">
-      <h2>Train with Simply DVC</h2>
+      <h2> style="font-size:48px;">Train with Simply DVC</h2>
       <p>Precision. Power. Speed.</p>
       <a href="#booking" class="btn">Book Now</a>
     </div>
