--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="booking">
     <h2>Book a Session</h2>
     <p>Schedule directly through my booking page:</p>
-    <a href="https://calendly.com/YOUR-CALENDLY" class="btn">Open Booking Page</a>
+    <a href="https://calendly.com/simplyxdvc" class="btn">Open Booking Page</a>
   </section>
 
   <section id="videos">
