--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <section id="about">
     <h2>About Simply DVC</h2>
-    <p>USPSA Carry Optics Master Class and NRA Certified firearms instructor providing professional private and group training at ranges across California. Focused on developing speed, accuracy, and confidence.</p>
+    <p>USPSA Master Class and NRA Certified firearms instructor providing professional private and group training at ranges across California. Focused on developing speed, accuracy, and confidence.</p>
   </section>
 
   <section id="services">
