--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header class="main-header">
+  SIMPLY DVC – FIRE ARMS TRAINING
+</header>
   <header>
     <div class="logo">
       <img src="logo.jpeg" alt="Logo"/>
