--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
+  <section class="hero">
+  <div class="slideshow"></div>
+  <div class="hero-content">
+    <h1>Train with Simply DVC</h1>
+    <a href="#booking" class="btn">Book Now</a>
+  </div>
+</section>
   <header class="main-header">
   SIMPLY DVC – FIRE ARMS TRAINING
 </header>
