--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
-  SIMPLY DVC – FIRE ARMS TRAINING
+  <h1 class="main-header">SIMPLY DVC – FIRE ARMS TRAINING</h1>
 </header>
   <header>
     <div class="logo">
