--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@
   </header>
 
  <section class="hero">
-  <div class="slideshow">
-  <img src="images/img1.jpg" class="slide fade" />
-  <img src="images/img2.jpg" class="slide fade" />
-  <img src="images/img3.jpg" class="slide fade" />
-</div>
+  <div class="slideshow"></div>
+  <div class="hero-content">
     <h1>Train with Simply DVC</h1>
     <a href="#booking" class="btn">Book Now</a>
   </div>
