--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="card">
         <h3>Private Lessons</h3>
         <p>1-on-1 focused training. Great for any skill level.</p>
-        <p><strong>$200/hr</strong></p>
+        <p><strong>$200/2hrs</strong></p>
       </div>
       <div class="card">
         <h3>Small Group (2–4)</h3>
