--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Simply DVC – Firearms Training</title>
@@ -26,9 +28,13 @@
   </header>
 
  <section class="hero">
-  <div class="slideshow"></div>
+  <div class="slideshow">
+    <img src="images/img1.jpg" class="slide fade">
+    <img src="images/img2.jpg" class="slide fade">
+    <img src="images/img3.jpg" class="slide fade">
+  </div>
   <div class="hero-content">
-    <h1>Train with Simply DVC</h1>
+    <h1 class="main-header">Train with Simply DVC</h1>
     <a href="#booking" class="btn">Book Now</a>
   </div>
 </section>
